--- a/Makefile.template
+++ b/Makefile.template
@@ -46,10 +46,10 @@ $(2)_INSTDIR = $$(if $$($(2)_INSTALLDIR),$$($(2)_INSTALLDIR),$(libdir))
 
 # targets
 $$($(2)_COBJECTS): Makefile.config
-	$(CC) -c -o $$@ -fPIC -DPIC $(CFLAGS) $$($(2)_CFLAGS) $$(subst .o,.c,$$@)
+	$(CC) -c -o $$@ -fPIC -DPIC $(CFLAGS) $$($(2)_CFLAGS) $$($$(patsubst %.o,%_c_CFLAGS,$$(notdir $$@))) $$(subst .o,.c,$$@)
 
 $$($(2)_CXXOBJECTS): Makefile.config
-	$(CXX) -c -o $$@ -fPIC -DPIC $(CFLAGS) $(CXXFLAGS) $$($(2)_CFLAGS) $$(subst .o,.cpp,$$@)
+	$(CXX) -c -o $$@ -fPIC -DPIC $(CFLAGS) $(CXXFLAGS) $$($(2)_CFLAGS) $$($$(patsubst %.o,%_cpp_CFLAGS,$$(notdir $$@))) $$(subst .o,.cpp,$$@)
 
 $$($(2)_BLDPRF)/$(1): $$($(2)_OBJECTS)
 	ar rcs $$@ $$^ $(LDFLAGS) $$($(2)_LDFLAGS)
