Fixed 'make clean' bug, updated TODO

--- a/Makefile.template
+++ b/Makefile.template
@@ -305,7 +305,7 @@ Makefile.deps: $(DEP_FILES)
 
 # GLOBAL CLEAN
 clean:
-	rm -rf $(ALL_OBJECTS) $(PROGRAMS_REAL) $(MODULES_REAL) $(LIBRARIES) $(ARCHIVES_REAL) $(LV2_BUNDLES_REAL) $(DEP_FILES)
+	rm -rf $(ALL_OBJECTS) $(PROGRAMS_REAL) $(MODULES_REAL) $(LIBRARIES_REAL) $(ARCHIVES_REAL) $(LV2_BUNDLES_REAL) $(DEP_FILES)
 
 
 # GLOBAL INSTALL
